--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1562,107 +1562,107 @@ stories:
   domain: http://www.kspress.com/
   link: http://kspress.com/news/2019/11/07/flint-hills-media-buys-clay-center-dispatch
 images:
-- name: liberty-back-statue-liberty-back-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-matrix.jpg
-- name: curtain-curtain-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-plentiful.jpg
-- name: amusement-park-amusement-park-2-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-rainbow-festival.jpg
-- name: nyc-flag-nycflag-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-storm.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
-- name: powerlines-power-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-sand-paper.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-atari-missle.jpg
-- name: nyc-flag-nycflag-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-collage.jpg
-- name: la-muse-checkpoint-charlie-mcdonalds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-checkpoint-charlie-mcdonalds.jpg
-- name: aws-s3-blossombar-blossombar-still-600.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-600.png
-- name: christianity-christianity-under-construction-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-colorful-dream.jpg
-- name: berlinwall2-berlinwall-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-sand-paper.jpg
-- name: nazi-invasion-old-piano-playing-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-piano-playing-hospital.jpg
-- name: downtheline-downtheline-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dry-skin.jpg
-- name: gypsy-wagon-gypsywagon-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-light-dali.jpg
-- name: status-berlin-status-berlin-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-emily-carr.jpg
-- name: border-crossing-bordercrossing-smooth-ride.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-smooth-ride.png
-- name: old-door-lock-old-door-lock-2-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-green-zuma.jpg
-- name: old-gas-pumps-oldgaspumps-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-circuit.jpg
-- name: ellis-island-ellis-island-room-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-satan-red.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
-- name: gypsy-wagon-gypsywagon-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-sand-paper.jpg
-- name: server-cloud-server-racks-clouds-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crafty-painting.jpg
-- name: blossombar-far-away-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-24-99.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-green-zuma.jpg
-- name: mediterranean-mediterranean-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-atari-asteroids.jpg
-- name: nazi-invasion-castle-on-the-hill-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-castle-on-the-hill-windows.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
-- name: hollywood-building-hollywood-building-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-nazi-poster.jpg
-- name: stalin-time-old-computer-bletchley-crypto.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-computer-bletchley-crypto.jpg
-- name: trucksilo-trucksilo-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-kandinsky-bv.jpg
-- name: fence-gorilla-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-dark-dali.jpg
-- name: blossombar-yellow-collage-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-00-00.jpg
-- name: nyc-flag-nycflag-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-granite.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-- name: fence-mexico-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-monet-one.jpg
-- name: stories-35910978054-906047b6cb-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-35910978054-906047b6cb-z.jpg
-- name: downtown-los-angeles-downtown-la-blue-granite.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-granite.JPG
-- name: locked-up-steam-lock-up-steam-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-really-hot.jpg
-- name: downtheline-downtheline-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-electricity.jpg
-- name: mosaic-face-mosaic-face-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-yellow-paper.jpg
-- name: white-house-lawn-white-house-lawn-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-oily-mcoilface.jpg
-- name: stalin-time-bletchley-computer-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-bletchley-computer-racks.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
-- name: old-house-oldhouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-constitution.jpg
-- name: bf-skinner-destruction-seattle-viaduct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-destruction-seattle-viaduct.jpg
-- name: gears-4882162452-fa3126b38d-b-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-storm.jpg
-- name: blossombar-deep-connections-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-24-99.jpg
-- name: old-door-lock-old-door-lock-2-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-constitution.jpg
-- name: old-door-lock-old-door-lock-2-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sunday.jpg
-- name: catacombs-catacombs-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-cinnamon-rolls.jpg
+- name: school-clouds-church-clouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-brush.jpg
+- name: dc-statue-dcstatue-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-diego-rivera1.jpg
+- name: locked-up-steam-lock-up-steam-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-three.jpg
+- name: old-church-oldchurch-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dry-skin.jpg
+- name: beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
+- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+- name: rockingchair-rockingchair-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-matrix.jpg
+- name: windowmountain-window-mountain-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-neo-instinct.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-3.jpg
+- name: old-school-house-old-schoolhouse-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-gred-mash.jpg
+- name: stories-ellis-island-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellis-island-nazi-poster.jpg
+- name: oldsmallboat-oldsmallboat-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-monet-one.jpg
+- name: white-house-whitehouse-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-nazi-poster.jpg
+- name: old-cabin-oldcabin-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-far-away.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-three.jpg
+- name: server-cloud-server-racks-clouds-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-alien-goggles.jpg
+- name: gears-4882162452-fa3126b38d-b-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-gan-vogh.jpg
+- name: legal-statue-legalstatue-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-really-hot.jpg
+- name: miamibeach-miamibeach-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-electricity.jpg
+- name: stories-new-15-190-800-500-0-max-0-1--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-15-190-800-500-0-max-0-1--5.jpg
+- name: downtown-trucksilo.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo.jpg
+- name: old-barn-old-barn-1500-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-smoking-cigarette.jpg
+- name: crow_mucha_mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
+- name: windowmountain-window-mountain-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-green-zuma.jpg
+- name: statue-of-liberty-front-view-statueofliberty-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-gred-mash.jpg
+- name: hollywood-building-hollywood-building-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-rainbow-festival.jpg
+- name: white-house-whitehouse-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-oily-mcoilface.jpg
+- name: oldtrain-oldtrain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dry-skin.jpg
+- name: la-muse-london-underground-covent-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-london-underground-covent-garden.jpg
+- name: berlinwall-DSC-0084-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-smooth-ride.jpg
+- name: old-cabin-oldcabin-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dark-dali.jpg
+- name: carry-load-carryload-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-graham-sutherland.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
+- name: flower-barbed-wire-flower-barbed-wire-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-wols.jpg
+- name: old-granary-field-granaryfield-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crabapple.jpg
+- name: docks-docks-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-constitution.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-granite.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-granite.png
+- name: server-cloud-server-racks-clouds-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-post-modern.jpg
+- name: white-house-lawn-white-house-lawn-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-emily-carr.jpg
+- name: oldcabin-oldcabin-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-marcel-duchamp.jpg
+- name: braceros-domingo-ulloa-dinosaur-walking-desert.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dinosaur-walking-desert.jpg
+- name: udnie-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0048.jpg
+- name: nazi-invasion-nyc-coming-in-on-train.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-nyc-coming-in-on-train.jpg
+- name: art-museum-art-museum-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crabapple.jpg
+- name: bf-skinner-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hallway-mirrors-hotel.jpg
+- name: copper-circuit-train-small-town-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-small-town-station.jpg
+- name: rain-princess-IMG_6436.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6436.jpg
+- name: bordercrossing-border-traffic.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-border-traffic.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
+- name: paris-paris-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-kand-two.jpg
+- name: aws-s3-diamondcreek-diamondcreek-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-1200.jpg
 ---
 Toys For Peninsula Kids.&nbsp;Arizona State Makes Another Sun Bowl Trip, Faces Florida St.&nbsp;Jobe Portrait To Hang In Lumberton Medical Clinic.&nbsp;Officials Warn Revelers To Throw Away Trees Safely.&nbsp;Vikes' Overstreet Suspended Following Saturday Arrest.&nbsp;Tornado A Lesson On Whats Important.&nbsp;Locals Share New Year's Resolutions.&nbsp;Harold Bryan Bud Tolley Obituary.&nbsp;
